# xilem

./: Cargo.toml
crates/xilem_core/src/: id.rs  sequence.rs  vec_splice.rs
crates/xilem_core/src/view/: memoize.rs  mod.rs
crates/xilem_html/: Cargo.toml
crates/xilem_html/src/: after_update.rs  app.rs  attribute.rs  cached.rs  context.rs  diff.rs  dom_attribute.rs  elements.rs  events.rs  hydrate.rs  interfaces.rs  lib.rs  one_of.rs  template.rs  vecmap.rs  view.rs
crates/xilem_html/src/dom_attributes/: element.rs  html_canvas_element.rs  html_media_element.rs  html_video_element.rs  mod.rs
crates/xilem_html/src/element/: elements.rs  mod.rs
crates/xilem_html/src/elements/: generated.rs  html_media_element.rs  html_video_element.rs  mod.rs
crates/xilem_html/src/event/: events.rs  mod.rs
crates/xilem_html/src/interfaces/: element.rs  event_target.rs  generated.rs  node.rs
crates/xilem_html/web_examples/after_update/: Cargo.toml
crates/xilem_html/web_examples/after_update/src/: main.rs
crates/xilem_html/web_examples/counter/: Cargo.toml
crates/xilem_html/web_examples/play_video/: Cargo.toml
crates/xilem_html/web_examples/play_video/src/: main.rs
crates/xilem_html/web_examples/todomvc/: Cargo.toml
crates/xilem_html/web_examples/todomvc/src/: main.rs
crates/xilem_svg/src/: context.rs  group.rs  view.rs
crates/xilem_web/: Cargo.toml
crates/xilem_web/src/: attribute.rs  context.rs  elements.rs  events.rs  hydrate.rs  interfaces.rs  lib.rs  one_of.rs  view.rs
examples/: hello.rs
masonry/src/widget/: checkbox.rs  kurbo.rs  widget.rs  widget_mut.rs  widget_pod.rs
src/: app.rs
src/view/: list.rs  mod.rs  view.rs
src/widget/: core.rs
xilem/examples/: to_do_mvc.rs
xilem/src/: any_view.rs  lib.rs
xilem/src/view/: flex.rs  grid.rs
xilem/src/view/board/: style_modifier.rs
xilem_core/examples/: filesystem.rs  user_interface.rs
xilem_core/src/: any_view.rs  element.rs  lib.rs  sequence.rs
xilem_core/src/views/: fork.rs  mod.rs  one_of.rs
xilem_core/tests/: one_of.rs
xilem_core/tests/common/: mod.rs
xilem_web/: Cargo.toml  README.md
xilem_web/src/: app.rs  attribute.rs  class.rs  context.rs  element_props.rs  elements.rs  interfaces.rs  lib.rs  one_of.rs  style.rs  vecmap.rs
xilem_web/src/svg/: common_attrs.rs  kurbo_shape.rs
xilem_web2/src/: lib.rs  one_of.rs
