[package]
name = "xilem_html"
version = "0.1.0"
description = "HTML DOM frontend for the Xilem Rust UI framework."
keywords = ["xilem", "html", "dom", "web", "ui"]
categories = ["gui", "web-programming"]
publish = false # Until it's ready
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
xilem_core.workspace = true
kurbo.workspace = true
bitflags = "2"
wasm-bindgen = "0.2.87"
paste = "1"
log = "0.4.19"
gloo = { version = "0.8.1", default-features = false, features = ["events", "utils"] }

# TODO make all or most of the extra elements and events optional via a feature
# I think that at least HtmlElement + SvgElement (and the parent dom interfaces) should be enabled by default
# possibly all web-sys elements, but that needs careful benching/investigation etc.
[dependencies.web-sys]
version = "0.3.4"
features = [
  "console",
  "Document",
  "Element",
  "Event",
  "HtmlElement",
  "Node",
  "NodeList",
  "SvgElement",
  "Text",
  "Window",
  "FocusEvent",
  "HtmlInputElement",
  "InputEvent",
  "KeyboardEvent",
  "MouseEvent",
  "PointerEvent",
  "WheelEvent",
  "HtmlAnchorElement",
  "HtmlAreaElement",
  "HtmlAudioElement",
  "HtmlBaseElement",
  "HtmlBodyElement",
  "HtmlBrElement",
  "HtmlButtonElement",
  "HtmlCanvasElement",
  "HtmlDataElement",
  "HtmlDataListElement",
  "HtmlDetailsElement",
  "HtmlDialogElement",
  "HtmlDirectoryElement",
  "HtmlDivElement",
  "HtmlDListElement",
  "HtmlUnknownElement",
  "HtmlEmbedElement",
  "HtmlFieldSetElement",
  "HtmlFontElement",
  "HtmlFormElement",
  "HtmlFrameElement",
  "HtmlFrameSetElement",
  "HtmlHeadElement",
  "HtmlHeadingElement",
  "HtmlHrElement",
  "HtmlHtmlElement",
  "HtmlIFrameElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlLabelElement",
  "HtmlLegendElement",
  "HtmlLiElement",
  "HtmlLinkElement",
  "HtmlMapElement",
  "HtmlMediaElement",
  "HtmlMenuElement",
  "HtmlMenuItemElement",
  "HtmlMetaElement",
  "HtmlMeterElement",
  "HtmlModElement",
  "HtmlObjectElement",
  "HtmlOListElement",
  "HtmlOptGroupElement",
  "HtmlOptionElement",
  "HtmlOutputElement",
  "HtmlParagraphElement",
  "HtmlParamElement",
  "HtmlPictureElement",
  "HtmlPreElement",
  "HtmlProgressElement",
  "HtmlQuoteElement",
  "HtmlScriptElement",
  "HtmlSelectElement",
  "HtmlSlotElement",
  "HtmlSourceElement",
  "HtmlSpanElement",
  "HtmlStyleElement",
  "HtmlTableCaptionElement",
  "HtmlTableCellElement",
  "HtmlTableColElement",
  "HtmlTableElement",
  "HtmlTableRowElement",
  "HtmlTableSectionElement",
  "HtmlTemplateElement",
  "HtmlTimeElement",
  "HtmlTextAreaElement",
  "HtmlTitleElement",
  "HtmlTrackElement",
  "HtmlUListElement",
  "HtmlVideoElement",
]

# TODO autogenerate these features and their dependencies? Probably not worth it...
[features]
HtmlElement = []
HtmlAnchorElement = ["HtmlElement"]
HtmlAreaElement = ["HtmlElement"]
HtmlAudioElement = ["HtmlMediaElement"]
HtmlBaseElement = ["HtmlElement"]
HtmlBodyElement = ["HtmlElement"]
HtmlBrElement = ["HtmlElement"]
HtmlButtonElement = ["HtmlElement"]
HtmlCanvasElement = ["HtmlElement"]
HtmlDataElement = ["HtmlElement"]
HtmlDataListElement = ["HtmlElement"]
HtmlDetailsElement = ["HtmlElement"]
HtmlDialogElement = ["HtmlElement"]
HtmlDirectoryElement = ["HtmlElement"]
HtmlDivElement = ["HtmlElement"]
HtmlDListElement = ["HtmlElement"]
HtmlUnknownElement = ["HtmlElement"]
HtmlEmbedElement = ["HtmlElement"]
HtmlFieldSetElement = ["HtmlElement"]
HtmlFontElement = ["HtmlElement"]
HtmlFormElement = ["HtmlElement"]
HtmlFrameElement = ["HtmlElement"]
HtmlFrameSetElement = ["HtmlElement"]
HtmlHeadElement = ["HtmlElement"]
HtmlHeadingElement = ["HtmlElement"]
HtmlHrElement = ["HtmlElement"]
HtmlHtmlElement = ["HtmlElement"]
HtmlIFrameElement = ["HtmlElement"]
HtmlImageElement = ["HtmlElement"]
HtmlInputElement = ["HtmlElement"]
HtmlLabelElement = ["HtmlElement"]
HtmlLegendElement = ["HtmlElement"]
HtmlLiElement = ["HtmlElement"]
HtmlLinkElement = ["HtmlElement"]
HtmlMapElement = ["HtmlElement"]
HtmlMediaElement = ["HtmlElement"]
HtmlMenuElement = ["HtmlElement"]
HtmlMenuItemElement = ["HtmlElement"]
HtmlMetaElement = ["HtmlElement"]
HtmlMeterElement = ["HtmlElement"]
HtmlModElement = ["HtmlElement"]
HtmlObjectElement = ["HtmlElement"]
HtmlOListElement = ["HtmlElement"]
HtmlOptGroupElement = ["HtmlElement"]
HtmlOptionElement = ["HtmlElement"]
HtmlOutputElement = ["HtmlElement"]
HtmlParagraphElement = ["HtmlElement"]
HtmlParamElement = ["HtmlElement"]
HtmlPictureElement = ["HtmlElement"]
HtmlPreElement = ["HtmlElement"]
HtmlProgressElement = ["HtmlElement"]
HtmlQuoteElement = ["HtmlElement"]
HtmlScriptElement = ["HtmlElement"]
HtmlSelectElement = ["HtmlElement"]
HtmlSlotElement = ["HtmlElement"]
HtmlSourceElement = ["HtmlElement"]
HtmlSpanElement = ["HtmlElement"]
HtmlStyleElement = ["HtmlElement"]
HtmlTableCaptionElement = ["HtmlElement"]
HtmlTableCellElement = ["HtmlElement"]
HtmlTableColElement = ["HtmlElement"]
HtmlTableElement = ["HtmlElement"]
HtmlTableRowElement = ["HtmlElement"]
HtmlTableSectionElement = ["HtmlElement"]
HtmlTemplateElement = ["HtmlElement"]
HtmlTimeElement = ["HtmlElement"]
HtmlTextAreaElement = ["HtmlElement"]
HtmlTitleElement = ["HtmlElement"]
HtmlTrackElement = ["HtmlElement"]
HtmlUListElement = ["HtmlElement"]
HtmlVideoElement = ["HtmlMediaElement"]

typed = [
  "HtmlElement",
  "HtmlAnchorElement",
  "HtmlAreaElement",
  "HtmlAudioElement",
  "HtmlBaseElement",
  "HtmlBodyElement",
  "HtmlBrElement",
  "HtmlButtonElement",
  "HtmlCanvasElement",
  "HtmlDataElement",
  "HtmlDataListElement",
  "HtmlDetailsElement",
  "HtmlDialogElement",
  "HtmlDirectoryElement",
  "HtmlDivElement",
  "HtmlDListElement",
  "HtmlUnknownElement",
  "HtmlEmbedElement",
  "HtmlFieldSetElement",
  "HtmlFontElement",
  "HtmlFormElement",
  "HtmlFrameElement",
  "HtmlFrameSetElement",
  "HtmlHeadElement",
  "HtmlHeadingElement",
  "HtmlHrElement",
  "HtmlHtmlElement",
  "HtmlIFrameElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlLabelElement",
  "HtmlLegendElement",
  "HtmlLiElement",
  "HtmlLinkElement",
  "HtmlMapElement",
  "HtmlMediaElement",
  "HtmlMenuElement",
  "HtmlMenuItemElement",
  "HtmlMetaElement",
  "HtmlMeterElement",
  "HtmlModElement",
  "HtmlObjectElement",
  "HtmlOListElement",
  "HtmlOptGroupElement",
  "HtmlOptionElement",
  "HtmlOutputElement",
  "HtmlParagraphElement",
  "HtmlParamElement",
  "HtmlPictureElement",
  "HtmlPreElement",
  "HtmlProgressElement",
  "HtmlQuoteElement",
  "HtmlScriptElement",
  "HtmlSelectElement",
  "HtmlSlotElement",
  "HtmlSourceElement",
  "HtmlSpanElement",
  "HtmlStyleElement",
  "HtmlTableCaptionElement",
  "HtmlTableCellElement",
  "HtmlTableColElement",
  "HtmlTableElement",
  "HtmlTableRowElement",
  "HtmlTableSectionElement",
  "HtmlTemplateElement",
  "HtmlTimeElement",
  "HtmlTextAreaElement",
  "HtmlTitleElement",
  "HtmlTrackElement",
  "HtmlUListElement",
  "HtmlVideoElement",
]
